--- a/compose.yaml
+++ b/compose.yaml
@@ -15,6 +15,15 @@ services:
       - "8080:8080"
     depends_on: 
       - db
+  dbviewer2:
+    image: dpage/pgadmin4:latest
+    ports:
+      - "5050:80"
+    environment:
+      PGADMIN_DEFAULT_EMAIL: docker@admin.com
+      PGADMIN_DEFAULT_PASSWORD: docker
+    depends_on: 
+      - db
 volumes:
   db_data:
     driver: local
